--- a/app/src/main/res/layouts/learn/layout/activity_sentence_builder.xml
+++ b/app/src/main/res/layouts/learn/layout/activity_sentence_builder.xml
@@ -7,7 +7,6 @@
     android:layout_height="match_parent"
     android:background="@color/white">
 
-    <!-- Tiêu đề -->
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
@@ -22,7 +21,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:padding="16dp" />
 
-    <!-- Thanh tiến trình -->
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
@@ -36,7 +34,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"/>
 
-    <!-- Câu hỏi -->
     <TextView
         android:id="@+id/tvQuestion"
         android:layout_width="wrap_content"
@@ -50,7 +47,6 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
-    <!-- Nút phát âm thanh -->
     <ImageButton
         android:id="@+id/btnSpeaker"
         android:layout_width="48dp"
@@ -62,21 +58,19 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="8dp"/>
 
-    <!-- Layout chứa các từ đã chọn -->
-    <LinearLayout
+    <com.google.android.flexbox.FlexboxLayout
         android:id="@+id/selectedWordsLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="center"
         android:layout_marginTop="16dp"
         app:layout_constraintTop_toBottomOf="@id/btnSpeaker"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintEnd_toEndOf="parent"
+        app:flexWrap="wrap"
+        app:justifyContent="center"
+        android:padding="8dp" />
 
-    </LinearLayout>
 
-    <!-- RecyclerView chứa các từ lựa chọn -->
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewWords"
         android:layout_width="match_parent"
