Cập nhật ForgotPassword

--- a/app/src/main/res/layouts/auth/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layouts/auth/layout/activity_forgot_password.xml
@@ -7,8 +7,8 @@
     android:background="@color/white"
     android:orientation="vertical"
     android:gravity="center"
-    android:id="@+id/registerLayout"
-    tools:context=".activities.RegisterActivity">
+    android:id="@+id/forgotPasswordLayout"
+    tools:context=".activities.ForgotPasswordActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -91,12 +91,11 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/button_ripple_0"
-            android:text="Đăng ký"
+            android:text="Đổi mật khẩu"
             android:textSize="14sp"
             android:layout_marginBottom="20dp"
             android:textColor="@color/white"
             android:textAllCaps="false" />
-
         <TextView
             android:id="@+id/textViewLogin"
             android:layout_width="wrap_content"
@@ -105,64 +104,5 @@
             android:textSize="16sp"
             android:layout_gravity="center_horizontal"
             android:text="Đăng nhập" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:layout_marginBottom="20dp">
-
-            <View
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="1dp"
-                android:background="#E6E6E6" />
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Hoặc"
-                android:textSize="14sp"
-                android:textColor="#828282"
-                android:paddingHorizontal="8dp" />
-
-            <View
-                android:layout_width="0dp"
-                android:layout_weight="1"
-                android:layout_height="1dp"
-                android:background="#E6E6E6" />
-        </LinearLayout>
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_ripple_1"
-            android:drawableStart="@drawable/ic_google"
-            android:paddingHorizontal="80dp"
-            android:text="Đăng ký với Google"
-            android:textAllCaps="false"
-            android:textSize="14sp"
-            android:layout_marginBottom="8dp"
-            android:layout_gravity="center_horizontal" />
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:background="@drawable/button_ripple_1"
-            android:drawableStart="@drawable/ic_facebook"
-            android:paddingHorizontal="70dp"
-            android:text="Đăng ký với Facebook"
-            android:textAllCaps="false"
-            android:textSize="14sp"
-            android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="15dp" />
-
-        <TextView
-            android:id="@+id/textViewTermsAndPrivacy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:textSize="16sp"
-            android:layout_gravity="center_horizontal"
-            android:text="Điều khoản" />
     </LinearLayout>
 </LinearLayout>
