--- a/app/src/main/res/layouts/auth/layout/activity_login.xml
+++ b/app/src/main/res/layouts/auth/layout/activity_login.xml
@@ -6,7 +6,9 @@
     android:layout_height="match_parent"
     android:background="@color/white"
     android:orientation="vertical"
-    android:gravity="center">
+    android:gravity="center"
+    android:id="@+id/loginLayout"
+    tools:context=".activities.LoginActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -63,19 +65,19 @@
             android:weightSum="2">
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/textViewRegister"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
+                android:layout_marginRight="125dp"
                 android:text="Tạo tài khoản"
                 android:textColor="@color/black"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
             <TextView
-                android:layout_width="0dp"
+                android:id="@+id/textViewForgotPassword"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="end"
                 android:text="Quên mật khẩu"
                 android:textColor="@color/black"
                 android:textSize="16sp"
