implement word-history functionally logic

--- a/app/src/main/res/layouts/learn/layout/activity_dictionary.xml
+++ b/app/src/main/res/layouts/learn/layout/activity_dictionary.xml
@@ -157,6 +157,7 @@
                     android:padding="12dp" />
 
                 <Button
+                    android:id="@+id/btnHistory"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
