--- a/app/src/main/res/layouts/auth/layout/activity_register.xml
+++ b/app/src/main/res/layouts/auth/layout/activity_register.xml
@@ -28,17 +28,17 @@
         android:layout_marginHorizontal="40dp">
 
         <EditText
-            android:id="@+id/editTextEmail"
+            android:id="@+id/editTextUsername"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="enggo@gmail.com"
+            android:hint="Tài khoản"
             android:textSize="14sp"
             android:padding="12dp"
             android:layout_marginBottom="10dp"
-            android:background="@drawable/edit_text_background"
-            android:inputType="textEmailAddress" />
+            android:background="@drawable/edit_text_background"/>
 
         <EditText
+            android:id="@+id/editTextPassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Mật khẩu"
@@ -49,6 +49,7 @@
             android:background="@drawable/edit_text_background" />
 
         <EditText
+            android:id="@+id/editTextRePassword"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:hint="Nhập lại mật khẩu"
@@ -58,6 +59,17 @@
             android:inputType="textPassword"
             android:background="@drawable/edit_text_background" />
 
+        <EditText
+            android:id="@+id/editTextEmail"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="enggo@gmail.com"
+            android:textSize="14sp"
+            android:padding="12dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edit_text_background"
+            android:inputType="textEmailAddress"/>
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -65,6 +77,7 @@
             android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/editTextOtp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
@@ -72,9 +85,11 @@
                 android:hint="Nhập OTP"
                 android:inputType="textPassword"
                 android:padding="12dp"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="gone"/>
 
             <Button
+                android:id="@+id/buttonSendOtp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -83,19 +98,21 @@
                 android:text="Gửi"
                 android:textSize="14sp"
                 android:textColor="@color/white"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <Button
+            android:id="@+id/buttonRegister"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
             android:background="@drawable/button_ripple_0"
             android:text="Đăng ký"
-            android:textSize="14sp"
-            android:layout_marginBottom="20dp"
+            android:textAllCaps="false"
             android:textColor="@color/white"
-            android:textAllCaps="false" />
+            android:textSize="14sp" />
 
         <TextView
             android:id="@+id/textViewLogin"
