--- a/app/src/main/res/layouts/learn/layout/activity_dictionary.xml
+++ b/app/src/main/res/layouts/learn/layout/activity_dictionary.xml
@@ -149,6 +149,7 @@
                 android:weightSum="2">
 
                 <Button
+                    android:id="@+id/btnFavorite"
                     android:layout_weight="1"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
