--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,7 +3,9 @@
     <style name="Base.Theme.EngGo" parent="Theme.AppCompat.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
-        <item name="android:fitsSystemWindows">true</item>
+
+<!--        <item name="android:fitsSystemWindows">true</item>-->
+
     </style>
 
     <style name="Theme.EngGo" parent="Base.Theme.EngGo" />
