Update auth api 2

--- a/app/src/main/res/layouts/auth/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layouts/auth/layout/activity_forgot_password.xml
@@ -38,14 +38,26 @@
             android:background="@drawable/edit_text_background"/>
 
         <EditText
-            android:id="@+id/editTextPassword"
+            android:id="@+id/editTextEmail"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Mật khẩu"
+            android:hint="enggo@gmail.com"
+            android:textSize="14sp"
+            android:padding="12dp"
+            android:layout_marginBottom="10dp"
+            android:background="@drawable/edit_text_background"
+            android:inputType="textEmailAddress"/>
+
+        <EditText
+            android:id="@+id/editTextNewPassword"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Mật khẩu mới"
             android:textSize="14sp"
             android:padding="12dp"
             android:layout_marginBottom="10dp"
             android:inputType="textPassword"
+            android:visibility="gone"
             android:background="@drawable/edit_text_background" />
 
         <EditText
@@ -57,6 +69,7 @@
             android:padding="12dp"
             android:layout_marginBottom="10dp"
             android:inputType="textPassword"
+            android:visibility="gone"
             android:background="@drawable/edit_text_background" />
 
         <LinearLayout
@@ -66,6 +79,7 @@
             android:orientation="horizontal">
 
             <EditText
+                android:id="@+id/editTextOtp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="4"
@@ -73,9 +87,11 @@
                 android:hint="Nhập OTP"
                 android:inputType="textPassword"
                 android:padding="12dp"
-                android:textSize="14sp" />
+                android:textSize="14sp"
+                android:visibility="gone"/>
 
             <Button
+                android:id="@+id/buttonSendOtp"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
@@ -84,10 +100,12 @@
                 android:text="Gửi"
                 android:textSize="14sp"
                 android:textColor="@color/white"
-                android:textAllCaps="false" />
+                android:textAllCaps="false"
+                android:visibility="gone"/>
         </LinearLayout>
 
         <Button
+            android:id="@+id/buttonChangePassword"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
