--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -55,11 +55,16 @@
         </ImageView>
     </LinearLayout>
 
-    <LinearLayout
+    <FrameLayout
+        android:id="@+id/rootLayout"
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="6.5">
-    </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+        </LinearLayout>
+    </FrameLayout>
 
     <View
         android:layout_width="match_parent"
