--- a/app/src/main/res/layout/row_ai_message.xml
+++ b/app/src/main/res/layout/row_ai_message.xml
@@ -16,6 +16,7 @@
         android:id="@+id/aiMessageLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="250dp"
         android:orientation="vertical"
         android:background="@drawable/bg_ai_message"
         android:padding="10dp">
