--- a/app/src/main/res/layout/row_user_message.xml
+++ b/app/src/main/res/layout/row_user_message.xml
@@ -10,6 +10,7 @@
         android:id="@+id/userMessageLayout"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:maxWidth="250dp"
         android:orientation="vertical"
         android:background="@drawable/bg_user_message"
         android:padding="10dp">
