--- a/app/src/main/res/layouts/learn/layout/activity_flashcard.xml
+++ b/app/src/main/res/layouts/learn/layout/activity_flashcard.xml
@@ -1,19 +1,81 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/flashCardRoot"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    android:background="@drawable/bg_flashcard"
+    android:orientation="vertical"
+    android:padding="24dp"
+    android:gravity="top"
+    android:layout_gravity="top">
 
-    <TextView
-        android:id="@+id/tv_demo"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Demo FlashCard View"
-        android:textSize="18sp"
-        android:textColor="@android:color/black"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent" />
 
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <!-- Icon -->
+        <ImageView
+            android:id="@+id/imgIcon"
+            android:layout_width="156dp"
+            android:layout_height="156dp"
+            android:src="@drawable/ic_paper_plane"
+            android:contentDescription="Icon"
+            android:layout_marginTop="40dp"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="128dp" />
+
+        <!-- Word -->
+        <TextView
+            android:id="@+id/tvTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Example"
+            android:textSize="48sp"
+            android:textStyle="bold"
+            android:textColor="#5B6268"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="20dp"
+             />
+        <TextView
+            android:id="@+id/tvPhonetic"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="/ˈɛɡ.zæm.pəl/"
+            android:textSize="24sp"
+            android:textStyle="bold"
+            android:textColor="#6D7379"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="64dp" />
+        <!-- Buttons -->
+        <LinearLayout
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="24dp">
+
+            <Button
+                android:background="@drawable/button_border_1"
+                android:id="@+id/btnCheck"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="REVEAL"
+                android:textAllCaps="true"
+                android:backgroundTint="#42A5F5"
+                android:textColor="@android:color/white"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"
+                android:layout_marginEnd="16dp"/>
+
+            <Button
+                android:background="@drawable/button_border_1"
+                android:id="@+id/btnContinue"
+                android:layout_width="120dp"
+                android:layout_height="wrap_content"
+                android:text="CONTINUE"
+                android:textAllCaps="true"
+                android:backgroundTint="#42A5F5"
+                android:textColor="@android:color/white"
+                android:paddingStart="24dp"
+                android:paddingEnd="24dp"/>
+        </LinearLayout>
+
+</LinearLayout>
