--- a/app/src/main/res/layouts/learn/layout/activity_sentence_builder.xml
+++ b/app/src/main/res/layouts/learn/layout/activity_sentence_builder.xml
@@ -5,102 +5,119 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@drawable/bg_flashcard">
 
     <TextView
         android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Sentence Builder"
+        android:text="SENTENCE BUILDER"
         android:textSize="24sp"
         android:textStyle="bold"
         android:textColor="#343a40"
         android:gravity="center"
+        android:layout_marginVertical="36dp"
+        android:background="@drawable/bg_logo_box"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:padding="16dp" />
+        android:paddingVertical="12dp"
+        />
 
     <ProgressBar
         android:id="@+id/progressBar"
         style="?android:attr/progressBarStyleHorizontal"
-        android:layout_width="200dp"
-        android:layout_height="8dp"
+        android:layout_width="match_parent"
+        android:layout_height="10dp"
 
         app:layout_constraintTop_toBottomOf="@id/tvTitle"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        android:layout_marginTop="12dp"/>
 
     <TextView
         android:id="@+id/tvQuestion"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Dịch câu này"
+        android:text="Ghép thành câu có nghĩa"
         android:textSize="18sp"
         android:textStyle="bold"
-        android:textColor="@android:color/black"
+        android:textColor="#555"
         app:layout_constraintTop_toBottomOf="@id/progressBar"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:layout_marginTop="16dp"/>
 
-    <ImageButton
-        android:id="@+id/btnSpeaker"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_volumeup"
-        app:layout_constraintTop_toBottomOf="@id/tvQuestion"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
 
     <com.google.android.flexbox.FlexboxLayout
         android:id="@+id/selectedWordsLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btnSpeaker"
+        android:layout_marginBottom="128dp"
+        android:layout_marginHorizontal="2dp"
+        app:layout_constraintTop_toBottomOf="@id/tvQuestion"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:flexWrap="wrap"
-        app:justifyContent="center"
+        app:justifyContent="flex_start"
         android:padding="8dp" />
+
+    <View
+        android:id="@+id/hiddenView"
+        android:layout_width="0dp"
+        android:layout_height="256dp"
+        app:layout_constraintTop_toBottomOf="@id/selectedWordsLayout"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
 
     <com.google.android.flexbox.FlexboxLayout
         android:id="@+id/flexboxWordContainer"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:layout_margin="2dp"
         android:padding="8dp"
         app:flexWrap="wrap"
-        app:justifyContent="center"
-        app:layout_constraintTop_toBottomOf="@id/selectedWordsLayout"
+        app:justifyContent="flex_start"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/hiddenView" />
 
-    <ImageButton
-        android:id="@+id/btnSubmit"
-        android:layout_width="54dp"
-        android:layout_height="54dp"
-        android:background="?android:attr/selectableItemBackgroundBorderless"
-        android:src="@drawable/ic_submit"
+    <View
+        android:id="@+id/hiddenView2"
+        android:layout_width="0dp"
+        android:layout_height="24dp"
         app:layout_constraintTop_toBottomOf="@id/flexboxWordContainer"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_marginTop="8dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
-    <ImageView
-        android:id="@+id/imgMascot"
-        android:layout_width="114dp"
-        android:layout_height="122dp"
-        android:layout_marginBottom="52dp"
-        android:src="@drawable/duolingo"
-        app:layout_constraintBottom_toBottomOf="parent"
+    <com.google.android.flexbox.FlexboxLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="2dp"
+        android:padding="8dp"
+        app:flexWrap="wrap"
+        app:justifyContent="space_evenly"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.111"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/hiddenView2">
+        <ImageButton
+            android:id="@+id/btnViewAnswer"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
+            android:layout_marginTop="8dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_view_answer" />
+
+        <ImageButton
+            android:id="@+id/btnSubmit"
+            android:layout_width="128dp"
+            android:layout_height="128dp"
+            android:layout_marginTop="8dp"
+            android:background="?android:attr/selectableItemBackgroundBorderless"
+            android:src="@drawable/ic_ic_submit_sentence" />
+    </com.google.android.flexbox.FlexboxLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
