--- a/app/src/main/res/layouts/auth/layout/activity_login.xml
+++ b/app/src/main/res/layouts/auth/layout/activity_login.xml
@@ -18,7 +18,7 @@
         <ImageView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/logo_full" />
+            android:src="@drawable/logo_full"/>
     </LinearLayout>
 
     <LinearLayout
@@ -111,23 +111,25 @@
         </LinearLayout>
 
         <Button
+            android:id="@+id/buttonLoginWithGoogle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
             android:background="@drawable/button_ripple_1"
             android:drawableStart="@drawable/ic_google"
             android:paddingHorizontal="40dp"
             android:text="Đăng nhập với Google"
             android:textAllCaps="false"
-            android:textSize="14sp"
-            android:layout_marginBottom="8dp" />
+            android:textSize="14sp" />
 
         <Button
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:id="@+id/buttonLoginAnonymous"
             android:background="@drawable/button_ripple_1"
-            android:drawableStart="@drawable/ic_facebook"
+            android:drawableStart="@drawable/ic_anonimous"
             android:paddingHorizontal="40dp"
-            android:text="Đăng nhập với Facebook"
+            android:text="Đăng nhập Ẩn danh"
             android:textAllCaps="false"
             android:textSize="14sp" />
     </LinearLayout>
